syntax = "proto3";
package http;
option go_package = "..";
import "model.proto";

// common
message AcceptResponse {
    string Code = 1;
    string Message = 2;
}

message ErrorResponse {
    string ErrorCode = 1;
    string ErrorMessage = 2;
}

// api
message GetAgentGroupResponse {
    string groupTag = 1;
    string description = 2;
}

message ListAgentGroupsResponse {
    repeated AgentGroup agentGroupList = 1;
}

message GetConfigResponse {
    string configInfo = 1;
    string description = 2;
}

message ListConfigsResponse {
    repeated Config configList = 1;
}

message GetAppliedConfigsResponse {
    repeated string configList = 1;
}

message GetAppliedAgentGroupsResponse {
    repeated string groupList = 1;
}

message ListAgentsResponse {
    repeated Agent groupList = 1;
}

message AgentGetConfigListResponse {
    repeated CheckResult config_check_result = 1;
}